--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>ShopMax</title>
     <meta name="description" content="Lovable Generated Project" />
     <!-- <meta name="author" content="Lovable" /> -->
-    <link rel="shortcut icon" href="Gemini_Generated_Image_bgsofvbgsofvbgso.png" type="image/x-icon">
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
 
     <!-- TODO: Update og:title to match your application name -->
     <meta property="og:title" content="ShopMax" />
